--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
+  "type": "module",
   "dependencies": {
     "@mdx-js/react": "^3.0.1",
-    "eslint": "^9.7.0"
+    "eslint": "^9.7.0",
+    "uuidv7": "^1.0.1"
   },
   "devDependencies": {
     "@types/eslint": "^9.6.0"
