--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "type": "module",
   "dependencies": {
     "@mdx-js/react": "^3.0.1",
+    "@types/node": "^22.1.0",
     "eslint": "^9.7.0",
     "uuidv7": "^1.0.1"
   },
