--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "@mdx-js/react": "^3.0.1",
     "@types/node": "^20.14.14",
     "eslint": "^9.7.0",
+    "suncalc": "^1.9.0",
     "typescript": "^5.6.0-dev.20240802",
     "uuidv7": "^1.0.1"
   },
   "devDependencies": {
-    "@types/eslint": "^9.6.0"
+    "@types/eslint": "^9.6.0",
+    "@types/suncalc": "^1.9.2"
   }
 }
