--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@mdx-js/react": "^3.0.1",
     "@types/node": "^20.14.14",
     "eslint": "^9.7.0",
+    "node-web-audio-api": "^0.21.1",
     "suncalc": "^1.9.0",
     "typescript": "^5.6.0-dev.20240802",
     "uuidv7": "^1.0.1"
