--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "semi": false,
   "singleQuote": true,
   "useTabs": false,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "printWidth": 70
 }
