--- a/package.json
+++ b/package.json
@@ -1,15 +1,35 @@
 {
   "dependencies": {
     "@mdx-js/react": "^3.0.1",
-    "@types/node": "^20.14.14",
-    "eslint": "^9.7.0",
-    "node-web-audio-api": "^0.21.1",
+    "@types/node": "^22.7.4",
+    "node-web-audio-api": "^0.21.3",
     "suncalc": "^1.9.0",
     "typescript": "^5.6.0-dev.20240802",
-    "uuidv7": "^1.0.1"
+    "uuidv7": "^1.0.2"
   },
   "devDependencies": {
-    "@types/eslint": "^9.6.0",
-    "@types/suncalc": "^1.9.2"
+    "@types/eslint": "^9.6.1",
+    "@types/suncalc": "^1.9.2",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "eslint": "^8"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true,
+      "es6": true
+    },
+    "extends": [
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "ecmaVersion": 2020,
+      "sourceType": "module"
+    },
+    "rules": {
+      "no-console": "off"
+    },
+    "overrides": []
   }
 }
